# research_paper_on_cognitive_biases_across_emotional_states_cyberrelevant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: pipeline.yaml  protocol.yaml  search_queries.yaml
docker/: Dockerfile  docker-compose.yml
paper/assets/tables/: table1_taxonomy.tex  table2_top_pairs.tex  table3_regression.tex  tableS10_taxonomy_leaf_inventory.tex  tableS1_cluster_ecbss.tex  tableS4_cluster_ecbss.tex  tableS4a_cluster_ecbss.tex  tableS4b_cluster_ecbss.tex  tableS5_cluster_profiles.tex  tableS6_emotion_lexicon.tex  tableS6_taxonomy_inventory.tex  tableS7_emotion_lexicon.tex  tableS7_taxonomy_inventory.tex  tableS8_emotion_lexicon.tex  tableS9_bias_sensitivity.tex
paper/report/: main.tex
paper/report/other/: references.bib
src/: methodology_deviations.md
src/analysis/: __init__.py  advanced_analysis.py  bias_profiler.py  data_loader.py  ecbss_scorer.py  fix_tables.py  generate_figures_v2.py  generate_tables.py  network_analysis.py  retry_errors.py  run_pipeline.py  statistical_analysis.py  visualizations.py  visualizations_v2.py
src/cbias/: __init__.py  __main__.py  cli.py
src/cbias/analysis/: __init__.py  robustness.py
src/cbias/emotion/: __init__.py  calibrate_dimensions.py
src/cbias/pipeline/: __init__.py  run_all.py
src/cbias/reporting/: __init__.py  export_assets.py
src/cbias/scoring/: __init__.py  emotion_semantic_scoring.py  ensemble_scoring.py  openrouter_client.py  semantic_dimensions.py
src/cbias/taxonomy/: __init__.py  build_taxonomy.py
src/ontologies/emotions/: emotional_states.txt
(+30 files in other folders)
